[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "healthagent"
version = "1.0.5"
dependencies = ["dbus-next", "systemd-python", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
healthagent = "healthagent.main:main"
health = "healthagent.client:main"
healthagent-install = "healthagent.install:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
healthagent = ["logging.conf", "etc/*"]

[tool.setuptools.packages.find]
include = ["healthagent"]
